// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navbar Renders correctly 1`] = `
<div>
  <div
    class="makeStyles-root-1"
  >
    <div
      class="MuiContainer-root-7 WithStyles(ForwardRef(Container))-root-6 MuiContainer-maxWidthLg-13"
    >
      <div
        class="MuiGrid-root-17 MuiGrid-container-18 MuiGrid-align-items-xs-center-26 MuiGrid-justify-content-xs-space-between-37"
      >
        <div
          class="MuiGrid-root-17 MuiGrid-container-18 MuiGrid-item-19 MuiGrid-align-items-xs-center-26 MuiGrid-grid-xs-9-60 MuiGrid-grid-md-8-87 MuiGrid-grid-lg-9-102"
        >
          <div
            class="MuiGrid-root-17 makeStyles-badgerIconContainer-15 MuiGrid-item-19"
          >
            <img
              alt="Badger Logo"
              class="makeStyles-badgerIcon-16"
              height="28"
              src="/assets/icons/badger_head.svg"
              width="28"
            />
          </div>
          <div
            class="MuiGrid-root-17 MuiGrid-item-19 MuiGrid-grid-xs-true-51"
          >
            <div
              class="MuiGrid-root-17 makeStyles-root-120 MuiGrid-container-18"
              id="here-ref"
            >
              <div
                class="MuiGrid-root-17 MuiGrid-item-19"
              >
                <span
                  class="MuiTypography-root-125 makeStyles-helperText-124 MuiTypography-displayInline-153"
                >
                  BADGER Price:  
                </span>
                <div
                  class="MuiBox-root-157 MuiBox-root-158"
                >
                  <span
                    class="MuiTypography-root-125 makeStyles-helperText-124"
                  >
                    $80.00
                  </span>
                </div>
              </div>
              <div
                class="MuiGrid-root-17 MuiGrid-item-19"
              >
                <span
                  class="MuiTypography-root-125 makeStyles-helperText-124 MuiTypography-displayInline-153"
                >
                  Cycle: 
                  5894
                    
                  (last: 0h 55m)
                </span>
              </div>
              <div
                class="MuiGrid-root-17 MuiGrid-item-19"
              >
                <span
                  class="MuiTypography-root-125 makeStyles-helperText-124 MuiTypography-displayInline-153"
                >
                  Ethereum
                   TVL:  
                </span>
                <div
                  class="MuiBox-root-157 MuiBox-root-161"
                >
                  <span
                    class="MuiTypography-root-125 makeStyles-helperText-124"
                  >
                    $1,000,000
                  </span>
                </div>
              </div>
              <div
                class="MuiGrid-root-17 makeStyles-assets-122 MuiGrid-item-19"
              >
                <span
                  class="MuiTypography-root-125 makeStyles-helperText-124 MuiTypography-displayInline-153"
                >
                  My Assets:  
                </span>
                <div
                  class="MuiBox-root-157 MuiBox-root-164"
                >
                  <span
                    class="MuiTypography-root-125 makeStyles-helperText-124"
                  >
                    $0
                  </span>
                </div>
              </div>
              <div
                class="MuiGrid-root-17 makeStyles-assets-122 MuiGrid-item-19"
              >
                <span
                  class="MuiTypography-root-125 makeStyles-helperText-124 MuiTypography-displayInline-153"
                >
                  My APR:  
                </span>
                <div
                  class="MuiBox-root-157 MuiBox-root-167"
                >
                  <span
                    class="MuiTypography-root-125 makeStyles-helperText-124"
                  >
                    0%
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="MuiGrid-root-17 MuiGrid-container-18 MuiGrid-item-19 MuiGrid-justify-content-xs-flex-end-36 MuiGrid-grid-xs-true-51"
        >
          <div
            class="MuiGrid-root-17 MuiGrid-container-18 MuiGrid-align-items-xs-center-26 MuiGrid-justify-content-xs-flex-end-36"
          >
            <div
              class="MuiGrid-root-17 makeStyles-iconContainer-169 MuiGrid-item-19"
            >
              <img
                alt="Discord Icon"
                class="makeStyles-socialIcon-168"
                src="/assets/icons/discord.svg"
              />
            </div>
            <div
              class="MuiGrid-root-17 makeStyles-iconContainer-169 makeStyles-twitter-170 MuiGrid-item-19"
            >
              <img
                alt="Twitter Icon"
                class="makeStyles-socialIcon-168"
                src="/assets/icons/twitter.svg"
              />
            </div>
            <div
              class="MuiGrid-root-17 MuiGrid-item-19"
            >
              <span
                class="MuiTypography-root-125 makeStyles-helperText-124"
              >
                <a
                  class="MuiTypography-root-125 MuiLink-root-171 MuiLink-underlineHover-173 MuiTypography-colorInherit-147"
                  href="https://docs.badger.com/"
                  rel="noopener"
                  target="_blank"
                >
                  DOCS
                </a>
              </span>
            </div>
            <div
              class="MuiGrid-root-17 MuiGrid-item-19"
            >
              <span
                class="MuiTypography-root-125 makeStyles-helperText-124"
              >
                <a
                  class="MuiTypography-root-125 MuiLink-root-171 MuiLink-underlineHover-173 MuiTypography-colorInherit-147"
                  href="https://forum.badger.finance"
                  rel="noopener"
                  target="_blank"
                >
                  FORUM
                </a>
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="makeStyles-actions-2"
      >
        <div
          class="MuiGrid-root-17 MuiGrid-container-18"
        >
          <div
            class="MuiGrid-root-17 MuiGrid-item-19 MuiGrid-grid-xs-auto-50"
          >
            <div
              class="MuiTabs-root-179"
            >
              <div
                class="MuiTabs-scroller-184 MuiTabs-fixed-185"
                style="overflow: hidden;"
              >
                <div
                  class="MuiTabs-flexContainer-181"
                  role="tablist"
                >
                  <button
                    aria-selected="true"
                    class="MuiButtonBase-root-200 MuiTab-root-190 makeStyles-tab-177 MuiTab-textColorPrimary-193 MuiTab-selected-195"
                    role="tab"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="MuiTab-wrapper-199"
                    >
                      VAULTS
                    </span>
                    <span
                      class="MuiTouchRipple-root-267"
                    />
                  </button>
                  <button
                    aria-selected="false"
                    class="MuiButtonBase-root-200 MuiTab-root-190 makeStyles-tab-177 MuiTab-textColorPrimary-193"
                    role="tab"
                    tabindex="-1"
                    type="button"
                  >
                    <span
                      class="MuiTab-wrapper-199"
                    >
                      BOOST
                    </span>
                    <span
                      class="MuiTouchRipple-root-267"
                    />
                  </button>
                  <button
                    aria-selected="false"
                    class="MuiButtonBase-root-200 MuiTab-root-190 makeStyles-tab-177 MuiTab-textColorPrimary-193"
                    role="tab"
                    tabindex="-1"
                    type="button"
                  >
                    <span
                      class="MuiTab-wrapper-199"
                    >
                      IBBTC
                    </span>
                    <span
                      class="MuiTouchRipple-root-267"
                    />
                  </button>
                </div>
                <span
                  class="PrivateTabIndicator-root-203 PrivateTabIndicator-colorPrimary-204 MuiTabs-indicator-189 makeStyles-indicator-178"
                  style="left: 0px; width: 0px;"
                />
              </div>
            </div>
          </div>
          <div
            class="MuiGrid-root-17 MuiGrid-container-18 MuiGrid-item-19 MuiGrid-grid-xs-true-51"
          >
            <div
              class="MuiGrid-root-17 makeStyles-root-207 MuiGrid-container-18 MuiGrid-justify-content-xs-flex-end-36"
            >
              <div
                class="MuiGrid-root-17 MuiGrid-item-19"
              >
                <button
                  class="MuiButtonBase-root-200 MuiButton-root-211 MuiButton-outlined-216 makeStyles-button-208 makeStyles-loadingRewardsButton-210 MuiButton-outlinedPrimary-217"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="MuiButton-label-212"
                  >
                    <div
                      class="makeStyles-loaderContainer-240 makeStyles-customSizing-242"
                    >
                      <div
                        class="MuiCircularProgress-root-243 MuiCircularProgress-colorPrimary-247 MuiCircularProgress-indeterminate-245"
                        role="progressbar"
                        style="width: 15px; height: 15px;"
                      >
                        <svg
                          class="MuiCircularProgress-svg-249"
                          viewBox="22 22 44 44"
                        >
                          <circle
                            class="MuiCircularProgress-circle-250 MuiCircularProgress-circleIndeterminate-252"
                            cx="44"
                            cy="44"
                            fill="none"
                            r="20.2"
                            stroke-width="3.6"
                          />
                        </svg>
                      </div>
                    </div>
                  </span>
                  <span
                    class="MuiTouchRipple-root-267"
                  />
                </button>
              </div>
              <div
                class="MuiGrid-root-17 MuiGrid-item-19"
              >
                <div
                  class="MuiBox-root-157 MuiBox-root-260"
                >
                  <button
                    aria-label="open network selector"
                    class="MuiButtonBase-root-200 MuiButton-root-211 MuiButton-outlined-216 makeStyles-networkButton-257 MuiButton-outlinedPrimary-217"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="MuiButton-label-212"
                    >
                      <img
                        alt="selected network icon"
                        class="makeStyles-selectedNetworkIcon-258"
                        height="17"
                        src="/assets/icons/ethereum-network.svg"
                        width="17"
                      />
                    </span>
                    <span
                      class="MuiTouchRipple-root-267"
                    />
                  </button>
                </div>
              </div>
              <div
                class="MuiGrid-root-17 MuiGrid-item-19"
              >
                <button
                  class="MuiButtonBase-root-200 MuiButton-root-211 MuiButton-outlined-216 MuiButton-outlinedPrimary-217 MuiButton-disableElevation-222"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="MuiButton-label-212 makeStyles-walletButtonLabel-264"
                  >
                    0x1..a1a
                  </span>
                  <span
                    class="MuiTouchRipple-root-267"
                  />
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Navbar Renders mobile version correctly 1`] = `
<div>
  <div
    class="makeStyles-root-1"
  >
    <div
      class="makeStyles-mobileRow-3"
    >
      <div
        class="MuiGrid-root-17 MuiGrid-container-18 MuiGrid-justify-content-xs-space-between-37"
      >
        <div
          class="MuiGrid-root-17 MuiGrid-container-18 MuiGrid-item-19 MuiGrid-align-items-xs-center-26 MuiGrid-grid-xs-true-51"
        >
          <button
            class="MuiButtonBase-root-200 MuiIconButton-root-270 makeStyles-menuIcon-267"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label-278"
            >
              <img
                alt="open menu"
                height="19"
                src="/assets/icons/mobile-drawer-icon.svg"
                width="22"
              />
            </span>
            <span
              class="MuiTouchRipple-root-299"
            />
          </button>
          <img
            alt="Badger Logo"
            class="makeStyles-badgerIcon-268"
            src="/assets/icons/badger_head.svg"
          />
        </div>
        <div
          class="MuiGrid-root-17 makeStyles-buttons-269 MuiGrid-container-18 MuiGrid-spacing-xs-2-41 MuiGrid-item-19 MuiGrid-grid-xs-8-59"
        >
          <div
            class="MuiGrid-root-17 MuiGrid-item-19"
          >
            <div
              class="MuiBox-root-157 MuiBox-root-279"
            >
              <button
                aria-label="open network selector"
                class="MuiButtonBase-root-200 MuiButton-root-211 MuiButton-outlined-216 makeStyles-networkButton-257 MuiButton-outlinedPrimary-217"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiButton-label-212"
                >
                  <img
                    alt="selected network icon"
                    class="makeStyles-selectedNetworkIcon-258"
                    height="17"
                    src="/assets/icons/ethereum-network.svg"
                    width="17"
                  />
                </span>
                <span
                  class="MuiTouchRipple-root-299"
                />
              </button>
            </div>
          </div>
          <div
            class="MuiGrid-root-17 MuiGrid-item-19"
          >
            <button
              class="MuiButtonBase-root-200 MuiButton-root-211 MuiButton-outlined-216 MuiButton-outlinedPrimary-217 MuiButton-disableElevation-222"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label-212 makeStyles-walletButtonLabel-264"
              >
                0x1..a1a
              </span>
              <span
                class="MuiTouchRipple-root-299"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
    <hr
      class="MuiDivider-root-280"
    />
    <div
      class="makeStyles-mobileRow-3 makeStyles-mobileStats-4"
    >
      <div
        class="MuiGrid-root-17 makeStyles-root-120 MuiGrid-container-18"
        id="here-ref"
      >
        <div
          class="MuiGrid-root-17 MuiGrid-item-19"
        >
          <span
            class="MuiTypography-root-125 makeStyles-helperText-124 MuiTypography-displayInline-153"
          >
            BADGER Price:  
          </span>
          <div
            class="MuiBox-root-157 MuiBox-root-289"
          >
            <span
              class="MuiTypography-root-125 makeStyles-helperText-124"
            >
              $80.00
            </span>
          </div>
        </div>
        <div
          class="MuiGrid-root-17 MuiGrid-item-19"
        >
          <span
            class="MuiTypography-root-125 makeStyles-helperText-124 MuiTypography-displayInline-153"
          >
            Cycle: 
            5894
              
            (last: 0h 55m)
          </span>
        </div>
        <div
          class="MuiGrid-root-17 MuiGrid-item-19"
        >
          <span
            class="MuiTypography-root-125 makeStyles-helperText-124 MuiTypography-displayInline-153"
          >
            Ethereum
             TVL:  
          </span>
          <div
            class="MuiBox-root-157 MuiBox-root-292"
          >
            <span
              class="MuiTypography-root-125 makeStyles-helperText-124"
            >
              $1,000,000
            </span>
          </div>
        </div>
        <div
          class="MuiGrid-root-17 makeStyles-assets-122 MuiGrid-item-19"
        >
          <span
            class="MuiTypography-root-125 makeStyles-helperText-124 MuiTypography-displayInline-153"
          >
            My Assets:  
          </span>
          <div
            class="MuiBox-root-157 MuiBox-root-295"
          >
            <span
              class="MuiTypography-root-125 makeStyles-helperText-124"
            >
              $0
            </span>
          </div>
        </div>
        <div
          class="MuiGrid-root-17 makeStyles-assets-122 MuiGrid-item-19"
        >
          <span
            class="MuiTypography-root-125 makeStyles-helperText-124 MuiTypography-displayInline-153"
          >
            My APR:  
          </span>
          <div
            class="MuiBox-root-157 MuiBox-root-298"
          >
            <span
              class="MuiTypography-root-125 makeStyles-helperText-124"
            >
              0%
            </span>
          </div>
        </div>
      </div>
    </div>
    <hr
      class="MuiDivider-root-280"
    />
    <div
      class="makeStyles-mobileTabs-5"
    >
      <div
        class="MuiTabs-root-179"
      >
        <div
          class="MuiTabs-scroller-184 MuiTabs-fixed-185"
          style="overflow: hidden;"
        >
          <div
            class="MuiTabs-flexContainer-181"
            role="tablist"
          >
            <button
              aria-selected="true"
              class="MuiButtonBase-root-200 MuiTab-root-190 makeStyles-tab-177 MuiTab-textColorPrimary-193 MuiTab-selected-195 MuiTab-fullWidth-197"
              role="tab"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiTab-wrapper-199"
              >
                VAULTS
              </span>
              <span
                class="MuiTouchRipple-root-299"
              />
            </button>
            <button
              aria-selected="false"
              class="MuiButtonBase-root-200 MuiTab-root-190 makeStyles-tab-177 MuiTab-textColorPrimary-193 MuiTab-fullWidth-197"
              role="tab"
              tabindex="-1"
              type="button"
            >
              <span
                class="MuiTab-wrapper-199"
              >
                BOOST
              </span>
              <span
                class="MuiTouchRipple-root-299"
              />
            </button>
            <button
              aria-selected="false"
              class="MuiButtonBase-root-200 MuiTab-root-190 makeStyles-tab-177 MuiTab-textColorPrimary-193 MuiTab-fullWidth-197"
              role="tab"
              tabindex="-1"
              type="button"
            >
              <span
                class="MuiTab-wrapper-199"
              >
                IBBTC
              </span>
              <span
                class="MuiTouchRipple-root-299"
              />
            </button>
          </div>
          <span
            class="PrivateTabIndicator-root-203 PrivateTabIndicator-colorPrimary-204 MuiTabs-indicator-189 makeStyles-indicator-178"
            style="left: 0px; width: 0px;"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Navbar Renders tablet version correctly 1`] = `
<div>
  <div
    class="makeStyles-root-1"
  >
    <div
      class="makeStyles-mobileRow-3"
    >
      <div
        class="MuiGrid-root-17 MuiGrid-container-18 MuiGrid-justify-content-xs-space-between-37"
      >
        <div
          class="MuiGrid-root-17 MuiGrid-container-18 MuiGrid-item-19 MuiGrid-align-items-xs-center-26 MuiGrid-grid-xs-true-51"
        >
          <button
            class="MuiButtonBase-root-200 MuiIconButton-root-270 makeStyles-menuIcon-267"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label-278"
            >
              <img
                alt="open menu"
                height="19"
                src="/assets/icons/mobile-drawer-icon.svg"
                width="22"
              />
            </span>
            <span
              class="MuiTouchRipple-root-299"
            />
          </button>
          <img
            alt="Badger Logo"
            class="makeStyles-badgerIcon-268"
            src="/assets/icons/badger_head.svg"
          />
        </div>
        <div
          class="MuiGrid-root-17 makeStyles-buttons-269 MuiGrid-container-18 MuiGrid-spacing-xs-2-41 MuiGrid-item-19 MuiGrid-grid-xs-8-59"
        >
          <div
            class="MuiGrid-root-17 MuiGrid-item-19"
          >
            <div
              class="MuiBox-root-157 MuiBox-root-279"
            >
              <button
                aria-label="open network selector"
                class="MuiButtonBase-root-200 MuiButton-root-211 MuiButton-outlined-216 makeStyles-networkButton-257 MuiButton-outlinedPrimary-217"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiButton-label-212"
                >
                  <img
                    alt="selected network icon"
                    class="makeStyles-selectedNetworkIcon-258"
                    height="17"
                    src="/assets/icons/ethereum-network.svg"
                    width="17"
                  />
                </span>
                <span
                  class="MuiTouchRipple-root-299"
                />
              </button>
            </div>
          </div>
          <div
            class="MuiGrid-root-17 MuiGrid-item-19"
          >
            <button
              class="MuiButtonBase-root-200 MuiButton-root-211 MuiButton-outlined-216 MuiButton-outlinedPrimary-217 MuiButton-disableElevation-222"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label-212 makeStyles-walletButtonLabel-264"
              >
                0x1..a1a
              </span>
              <span
                class="MuiTouchRipple-root-299"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
    <hr
      class="MuiDivider-root-280"
    />
    <div
      class="makeStyles-mobileRow-3 makeStyles-mobileStats-4"
    >
      <div
        class="MuiGrid-root-17 makeStyles-root-120 MuiGrid-container-18"
        id="here-ref"
      >
        <div
          class="MuiGrid-root-17 MuiGrid-item-19"
        >
          <span
            class="MuiTypography-root-125 makeStyles-helperText-124 MuiTypography-displayInline-153"
          >
            BADGER Price:  
          </span>
          <div
            class="MuiBox-root-157 MuiBox-root-289"
          >
            <span
              class="MuiTypography-root-125 makeStyles-helperText-124"
            >
              $80.00
            </span>
          </div>
        </div>
        <div
          class="MuiGrid-root-17 MuiGrid-item-19"
        >
          <span
            class="MuiTypography-root-125 makeStyles-helperText-124 MuiTypography-displayInline-153"
          >
            Cycle: 
            5894
              
            (last: 0h 55m)
          </span>
        </div>
        <div
          class="MuiGrid-root-17 MuiGrid-item-19"
        >
          <span
            class="MuiTypography-root-125 makeStyles-helperText-124 MuiTypography-displayInline-153"
          >
            Ethereum
             TVL:  
          </span>
          <div
            class="MuiBox-root-157 MuiBox-root-292"
          >
            <span
              class="MuiTypography-root-125 makeStyles-helperText-124"
            >
              $1,000,000
            </span>
          </div>
        </div>
        <div
          class="MuiGrid-root-17 makeStyles-assets-122 MuiGrid-item-19"
        >
          <span
            class="MuiTypography-root-125 makeStyles-helperText-124 MuiTypography-displayInline-153"
          >
            My Assets:  
          </span>
          <div
            class="MuiBox-root-157 MuiBox-root-295"
          >
            <span
              class="MuiTypography-root-125 makeStyles-helperText-124"
            >
              $0
            </span>
          </div>
        </div>
        <div
          class="MuiGrid-root-17 makeStyles-assets-122 MuiGrid-item-19"
        >
          <span
            class="MuiTypography-root-125 makeStyles-helperText-124 MuiTypography-displayInline-153"
          >
            My APR:  
          </span>
          <div
            class="MuiBox-root-157 MuiBox-root-298"
          >
            <span
              class="MuiTypography-root-125 makeStyles-helperText-124"
            >
              0%
            </span>
          </div>
        </div>
      </div>
    </div>
    <hr
      class="MuiDivider-root-280"
    />
    <div
      class="makeStyles-mobileTabs-5"
    >
      <div
        class="MuiTabs-root-179"
      >
        <div
          class="MuiTabs-scroller-184 MuiTabs-fixed-185"
          style="overflow: hidden;"
        >
          <div
            class="MuiTabs-flexContainer-181"
            role="tablist"
          >
            <button
              aria-selected="true"
              class="MuiButtonBase-root-200 MuiTab-root-190 makeStyles-tab-177 MuiTab-textColorPrimary-193 MuiTab-selected-195"
              role="tab"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiTab-wrapper-199"
              >
                VAULTS
              </span>
              <span
                class="MuiTouchRipple-root-299"
              />
            </button>
            <button
              aria-selected="false"
              class="MuiButtonBase-root-200 MuiTab-root-190 makeStyles-tab-177 MuiTab-textColorPrimary-193"
              role="tab"
              tabindex="-1"
              type="button"
            >
              <span
                class="MuiTab-wrapper-199"
              >
                BOOST
              </span>
              <span
                class="MuiTouchRipple-root-299"
              />
            </button>
            <button
              aria-selected="false"
              class="MuiButtonBase-root-200 MuiTab-root-190 makeStyles-tab-177 MuiTab-textColorPrimary-193"
              role="tab"
              tabindex="-1"
              type="button"
            >
              <span
                class="MuiTab-wrapper-199"
              >
                IBBTC
              </span>
              <span
                class="MuiTouchRipple-root-299"
              />
            </button>
          </div>
          <span
            class="PrivateTabIndicator-root-203 PrivateTabIndicator-colorPrimary-204 MuiTabs-indicator-189 makeStyles-indicator-178"
            style="left: 0px; width: 0px;"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
